--- a/src/Pages/Update.form
+++ b/src/Pages/Update.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="48" y="54" width="866" height="625"/>
+      <xy x="48" y="54" width="866" height="654"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -307,7 +307,7 @@
             </children>
           </grid>
           <grid id="f998f" binding="btnPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="20" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -317,7 +317,7 @@
               <component id="baa0b" class="javax.swing.JButton" binding="updateButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="40"/>
+                    <preferred-size width="-1" height="35"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -330,7 +330,7 @@
               <component id="2d017" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="40"/>
+                    <preferred-size width="-1" height="35"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -343,7 +343,7 @@
               <component id="c4b68" class="javax.swing.JButton" binding="exitButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="40"/>
+                    <preferred-size width="-1" height="35"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -355,9 +355,15 @@
               </component>
               <component id="b895a" class="javax.swing.JButton" binding="addButton" default-binding="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="35"/>
+                  </grid>
                 </constraints>
                 <properties>
+                  <background color="-23296"/>
+                  <enabled value="true"/>
+                  <font name="Consolas" size="18" style="1"/>
+                  <foreground color="-1"/>
                   <text value="Add"/>
                 </properties>
               </component>
